--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,28 +1,34 @@
 html,
 body {
-	height: 100%;
+  height: 100%;
+}
+
+body {
+  font-family: "Open Sans", sans-serif;
+  font-size: 16px;
+  height: 27px;
+  font-weight: 400;
+}
+
+h1,h2,h3,h4,h5,h6 {
+  @extend %title-font;
 }
 
 .wrapper {
-	display: flex;
-	flex-direction: column;
-	min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
 }
 
 .main {
-	flex: 1 0 auto;
+  flex: 1 0 auto;
 }
 .footer {
-	flex: 0 0 auto;
+  flex: 0 0 auto;
 }
 
-.container{
+.container {
   max-width: 1200px;
   margin: 0 auto;
   padding: 0 15px;
 }
-
-
-
-
-
