--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -1,13 +1,17 @@
 @font-face {
   font-family: 'Open Sans';
   src: url('../fonts/OpenSans-Regular.ttf');
-  font-style: normal;
-  font-weight: normal;
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: 'Open Sans';
+  src: url('../fonts/OpenSans-SemiBold.ttf');
+  font-weight: 600;
 }
 
 @font-face {
   font-family: 'Montserrat';
   src: url('../fonts/Montserrat-Bold.ttf');
-  font-style: 700;
-  font-weight: normal;
+  font-weight: 700;
 }
