--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -8,6 +8,7 @@ body {
   font-size: 16px;
   height: 27px;
   font-weight: 400;
+	color: $default;
 }
 
 h1,h2,h3,h4,h5,h6 {
@@ -17,7 +18,7 @@ h1,h2,h3,h4,h5,h6 {
 .wrapper {
   display: flex;
   flex-direction: column;
-  min-height: 100%;
+  min-height: 100vh;
 }
 
 .main {
@@ -28,7 +29,7 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 .container {
-  max-width: 1200px;
+  max-width: 1140px;
   margin: 0 auto;
   padding: 0 15px;
 }
