--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -40,6 +40,12 @@ h6 {
   padding: 0 15px;
 }
 
+.container-fluid {
+  max-width: 1920px;
+  padding: 0 10px;
+  margin: 0 auto;
+}
+
 .slick-dots {
   display: flex;
   justify-content: center;
