--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -263,11 +263,10 @@
       z-index: -1;
       display: block;
       height: 722px;
-      background: $light-gray url("../images/slider-bg.jpg") no-repeat center top;
+      background: $light-gray url("../images/slider-bg.jpg") no-repeat center
+        top;
       background-size: cover;
     }
-  }
-  &__slider {
   }
   &__slider-item {
     display: flex !important;
@@ -302,6 +301,101 @@
   }
   &__slider-text {
     max-width: 585px;
+  }
+}
+
+.new-collection {
+  text-align: center;
+  padding: 45px 0 105px;
+  &__inner {
+  }
+  &__title {
+    position: relative;
+    font-size: 35px;
+    line-height: 51px;
+    padding-bottom: 25px;
+    margin-bottom: 25px;
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      margin: 0 auto;
+      width: 250px;
+      height: 1px;
+      background-color: $gray;
+    }
+  }
+  &__text {
+    margin-bottom: 30px;
+    max-width: 730px;
+    margin: 0 auto 30px;
+  }
+}
+
+.collection {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-gap: 30px;
+  &__item {
+    position: relative;
+    height: 350px;
+    overflow: hidden;
+    &:hover {
+      .collection__info {
+        opacity: 1;
+        transform: translateY(0%);
+        transition: opacity 0.3s, transform 0s;
+      }
+    }
+  }
+  &__img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  &__info {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 1;
+    background-color: rgba(#fff, 0.6);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 10px;
+    opacity: 0;
+    transform: translateY(100%);
+    transition: opacity 0.3s, transform 0s 0.3s;
+  }
+  &__info-title {
+    position: relative;
+    font-size: 20px;
+    line-height: 24px;
+    padding-bottom: 19px;
+    margin-bottom: 19px;
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      display: block;
+      max-width: 200px;
+      height: 1px;
+      background: #6d7278;
+      margin: 0 auto;
+    }
+  }
+  &__info-text {
+    font-weight: 600;
+    color: #707070;
+    font-size: 14px;
   }
 }
 
