--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -307,8 +307,6 @@
 .new-collection {
   text-align: center;
   padding: 45px 0 105px;
-  &__inner {
-  }
   &__title {
     position: relative;
     font-size: 35px;
@@ -396,6 +394,36 @@
     font-weight: 600;
     color: #707070;
     font-size: 14px;
+  }
+}
+
+.decor {
+  background-size: cover;
+  padding: 170px 0 150px;
+  min-height: 600px;
+  &__inner {
+    max-width: 540px;
+  }
+  &__title {
+    position: relative;
+    font-size: 60px;
+    line-height: 80px;
+    padding-bottom: 22px;
+    margin-bottom: 55px;
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      display: block;
+      max-width: 200px;
+      width: 100%;
+      height: 1px;
+      background: $gray;
+    }
+  }
+  &__text {
+    padding-left: 50px;
   }
 }
 
