--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -34,7 +34,7 @@
   }
   &__link {
     @extend %title-font;
-    color: rgba(#363838, 0.9);
+    color: rgba($black, 0.9);
     line-height: 22px;
   }
 }
@@ -424,6 +424,84 @@
   }
   &__text {
     padding-left: 50px;
+  }
+}
+
+.works-path {
+  padding: 80px 0 30px;
+  &__inner {
+  }
+  &__title {
+    text-align: center;
+    font-size: 36px;
+    line-height: 51px;
+    margin-bottom: 10px;
+  }
+  &__items {
+  }
+  &__items-box {
+    display: flex;
+    align-items: center;
+    align-items: flex-end;
+  }
+  &__item {
+    position: relative;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 250px;
+    padding: 30px 0;
+    &::before {
+      content: "";
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      display: block;
+      width: 2px;
+      height: 20px;
+      background: rgba($black, 0.7);
+    }
+  }
+  &__item--production {
+    margin-left: 317px;
+  }
+  &__item--consultation {
+    width: 300px;
+    &::before {
+      display: none;
+    }
+  }
+  &__item--measurements {
+    margin-left: 306px;
+    &::before {
+      top: 0;
+    }
+  }
+  &__item-img {
+    margin-right: 15px;
+  }
+  &__item-title {
+  }
+  &__item-text {
+    line-height: 23px;
+    margin-top: 14px;
+  }
+  &__line {
+    position: relative;
+    display: block;
+    height: 2px;
+    background: rgba($black, 0.7);
+    &::before {
+      content: "";
+      position: absolute;
+      left: 0;
+      top: -4px;
+      display: block;
+      width: 10px;
+      height: 10px;
+      border-radius: 50%;
+      background-color: $black;
+    }
   }
 }
 
