--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -33,9 +33,21 @@
     padding-left: 35px;
   }
   &__link {
+    position: relative;
     @extend %title-font;
     color: rgba($black, 0.9);
     line-height: 22px;
+  }
+  &__link--active::after {
+    content: "";
+    position: absolute;
+    bottom: -6px;
+    left: 0;
+    right: 0;
+    display: block;
+    height: 3px;
+    background: rgba($black, 0.7);
+    border-radius: 2px;
   }
 }
 
@@ -569,8 +581,6 @@
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 30px;
   }
-  &__item {
-  }
   &__item-img {
     width: 100%;
     height: 330px;
@@ -617,6 +627,61 @@
   }
   &__link {
     color: $default;
+  }
+}
+
+.about {
+  &__prev {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-position: center top;
+    background-size: cover;
+    padding: 160px 0;
+    margin-top: -54px;
+  }
+  &__prev-title {
+    font-size: 60px;
+    line-height: 80px;
+  }
+  &__content {
+    padding: 130px 0 40px;
+  }
+  &__title {
+    position: relative;
+    font-size: 36px;
+    line-height: 60px;
+    padding-bottom: 20px;
+    margin-bottom: 23px;
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      display: block;
+      width: 200px;
+      height: 2px;
+      background-color: $gray;
+    }
+  }
+  &__text {
+    max-width: 825px;
+    margin-left: auto;
+    p {
+      margin-bottom: 30px;
+    }
+  }
+  &__popup {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 414px;
+    background-position: center top;
+    background-size: cover;
+  }
+  &__popup-play {
+  }
+  &__popup-icon {
   }
 }
 
