--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -679,9 +679,86 @@
     background-position: center top;
     background-size: cover;
   }
-  &__popup-play {
+}
+
+.inspiration {
+  position: relative;
+  padding: 100px 0 45px;
+  &::after {
+    content: "";
+    position: absolute;
+    top: 220px;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: -1;
+    background-image: url("../images/inspiration-bg.jpg");
+    background-size: cover;
+    background-position: center;
   }
-  &__popup-icon {
+  &__inner {
+    display: flex;
+  }
+  &__img {
+    display: block;
+    max-width: 430px;
+    height: auto;
+    margin-left: -230px;
+  }
+  &__content {
+    padding-left: 70px;
+  }
+  &__title {
+    position: relative;
+    font-size: 36px;
+    line-height: 60px;
+    padding-bottom: 15px;
+    margin-bottom: 23px;
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      display: block;
+      width: 200px;
+      height: 1px;
+      background-color: $gray;
+    }
+  }
+  &__list {
+    margin-top: 50px;
+  }
+  &__item {
+    position: relative;
+    margin-top: 33px;
+    @extend %title-font;
+    font-size: 16px;
+    line-height: 23px;
+    &::after {
+      content: "";
+      display: block;
+      width: 100%;
+      height: 2px;
+      border-radius: 4px;
+      background: #fff;
+    }
+  }
+  &__item-content {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding-bottom: 14px;
+  }
+  &__num {
+    padding-left: 20px;
+  }
+  &__line {
+    position: absolute;
+    bottom: 0;
+    z-index: 1;
+    background-color: $black;
+    height: 2px;
+    border-radius: 4px;
   }
 }
 
