--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -762,4 +762,26 @@
   }
 }
 
+.partners {
+  &__title {
+    display: none;
+  }
+  &__items {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+  }
+  &__item {
+    width: 20%;
+    padding: 30px;
+  }
+  &__img {
+    display: block;
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+  }
+}
+
+
 @import "media";
