--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -137,24 +137,7 @@
     margin-bottom: 16px;
   }
   &__info-email {
-    position: relative;
-    display: inline-block;
-    font-size: 14px;
-    color: $black;
-    font-weight: 600;
     margin-bottom: 22px;
-    padding-left: 30px;
-    &::before {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: 0;
-      bottom: 0;
-      background: url("../images/envelope.svg") center center;
-      background-size: contain;
-      width: 16px;
-      height: 100%;
-    }
   }
   &__form {
     display: flex;
@@ -790,13 +773,107 @@
   margin-top: -53px;
   margin-bottom: 55px;
   padding-bottom: 570px;
-  background-color: rgba(#AADAFF, .5);
+  background-color: rgba(#aadaff, 0.5);
   iframe {
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
+  }
+}
+
+.contact {
+  padding-bottom: 100px;
+  &__title {
+    position: relative;
+    font-size: 36px;
+    line-height: 60px;
+    padding-bottom: 23px;
+    margin-bottom: 40px;
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      display: block;
+      width: 200px;
+      height: 2px;
+      background-color: rgba($gray, 0.5);
+    }
+  }
+  &__content {
+    max-width: 825px;
+    margin-left: auto;
+  }
+  &__social {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 10px;
+    margin-left: -5px;
+  }
+  &__social-item {
+    padding-right: 30px;
+    margin-bottom: 5px;
+    &:last-child {
+      margin-right: 0;
+    }
+  }
+  &__social-link {
+  }
+  &__social-icon {
+    width: 30px;
+    height: 30px;
+    padding: 5px;
+  }
+  &__text {
+    color: rgba($default, 0.6);
+    margin-bottom: 10px;
+  }
+  &__phone,
+  &__street,
+  &__city {
+    color: $black;
+    font-size: 16px;
+    line-height: 27px;
+  }
+  &__info-email {
+    margin-top: 16px;
+    margin-bottom: 24px;
+  }
+  &__form {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 13px 11px;
+  }
+  &__form-input,
+  &__form-area {
+    border: 1px solid #dfdfdf;
+    border-radius: 20px;
+    padding: 6px 17px;
+    line-height: 28px;
+    &::placeholder {
+      color: #a1a1a1;
+    }
+  }
+  &__form-input {
+  }
+  &__form-area {
+    grid-column: span 2;
+    min-height: 125px;
+    padding: 14px 17px;
+  }
+  &__form-btn {
+    min-width: 180px;
+    width: fit-content;
+    background-color: $black;
+    border: none;
+    color: #fff;
+    font-weight: 600;
+    line-height: 28px;
+    padding: 6px 20px;
+    margin-top: 10px;
+    border-radius: 21px;
   }
 }
 
