--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -780,6 +780,8 @@
     left: 0;
     right: 0;
     bottom: 0;
+    width: 100%;
+    height: 100%;
   }
 }
 
@@ -819,8 +821,6 @@
       margin-right: 0;
     }
   }
-  &__social-link {
-  }
   &__social-icon {
     width: 30px;
     height: 30px;
@@ -856,8 +856,6 @@
       color: #a1a1a1;
     }
   }
-  &__form-input {
-  }
   &__form-area {
     grid-column: span 2;
     min-height: 125px;
@@ -874,6 +872,46 @@
     padding: 6px 20px;
     margin-top: 10px;
     border-radius: 21px;
+  }
+}
+
+.contact-slider {
+  margin-bottom: 100px;
+  &__link {
+    height: 170px;
+    position: relative;
+    margin-bottom: 35px;
+    &:hover .contact-slider__title {
+      opacity: 1;
+    }
+  }
+  &__img {
+    position: absolute;
+    top: 7px;
+    left: 7px;
+    right: 7px;
+    bottom: 7px;
+    object-fit: cover;
+    object-position: center;
+  }
+  &__title {
+    position: absolute;
+    top: 7px;
+    left: 7px;
+    right: 7px;
+    bottom: 7px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    font-size: 16px;
+    line-height: 22px;
+    text-align: center;
+    background-color: rgba(#fff, 0.6);
+    padding: 15px;
+    opacity: 0;
+    transition: .3s;
   }
 }
 
