Added blog__items, blog__blockquote and pagination blocks to blog.html, new font, styles, scripts and images

--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -11,6 +11,14 @@
 }
 
 @font-face {
+  font-family: 'Open Sans';
+  src: url('../fonts/OpenSans-LightItalic.ttf');
+  font-weight: 300;
+  font-style: italic;
+}
+
+
+@font-face {
   font-family: 'Montserrat';
   src: url('../fonts/Montserrat-Bold.ttf');
   font-weight: 700;
