--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -910,9 +910,90 @@
 
 .blog {
   margin-top: 60px;
+  margin-bottom: 66px;
   &__inner {
     display: flex;
     justify-content: space-between;
+  }
+  &__items {
+    max-width: 730px;
+    flex: 1;
+  }
+  &__item {
+    margin-bottom: 50px;
+  }
+  &__item-img,
+  &__item-slider,
+  &__item-popup {
+    display: block;
+    width: 100%;
+    height: 415px;
+    overflow: hidden;
+  }
+  &__item-info {
+    margin-top: 24px;
+    margin-bottom: 9px;
+    font-size: 14px;
+    line-height: 28px;
+  }
+  &__item-author,
+  &__item-theme {
+    color: inherit;
+  }
+  &__item-title {
+    font-size: 24px;
+    line-height: 38px;
+    @extend %title-font;
+  }
+  &__item-text {
+    margin-top: 6px;
+  }
+  &__blockquote {
+    padding: 54px 64px;
+    background-color: #f0f0f0;
+    text-align: center;
+    font-weight: 300;
+    font-size: 24px;
+    line-height: 38px;
+    font-style: italic;
+    margin-bottom: 50px;
+  }
+  &__blockquote-author {
+    position: relative;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 22px;
+    font-style: normal;
+    padding-top: 23px;
+    margin-top: 23px;
+    &::before {
+      content: "";
+      display: block;
+      width: 200px;
+      height: 1px;
+      background-color: $gray;
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      margin: 0 auto;
+    }
+  }
+  &__item-popup {
+    position: relative;
+  }
+  &__item-popup-btn {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 50%;
+    overflow: hidden;
+    img {
+      display: block;
+      width: 80px;
+      height: 80px;
+    }
   }
   &__tags {
     margin-bottom: 50px;
@@ -937,7 +1018,6 @@
   &__social {
     display: flex;
     margin-left: -5px;
-    margin-bottom: 50px;
   }
   &__social-item {
     display: block;
@@ -953,6 +1033,34 @@
     padding: 5px;
     width: 28px;
     height: 28px;
+  }
+}
+
+.pagination {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  &__arrow {
+    margin: 0 6px;
+  }
+  &__arrow--disabled {
+    display: none;
+  }
+  &__list {
+    display: flex;
+  }
+  &__item {
+    margin: 0 6px;
+  }
+  &__num {
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 28px;
+    color: #707070;
+  }
+  &__num--active {
+    color: $black;
   }
 }
 
@@ -1020,6 +1128,9 @@
     font-size: 14px;
     line-height: 28px;
     color: $gray;
+  }
+  &__item-date::after {
+    content: " | ";
   }
 }
 
