--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -17,6 +17,45 @@
     padding: 0;
     cursor: pointer;
   }
+  &__btn-menu {
+    width: 45px;
+    height: 45px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-end;
+    padding: 0;
+    border: none;
+    padding: 10px 5px;
+    display: none;
+    overflow: hidden;
+    span {
+      display: block;
+      width: 100%;
+      height: 3px;
+      border-radius: 3px;
+      background-color: #000;
+      transition: 0.5s;
+    }
+  }
+  &__btn-menu--active {
+    span:nth-child(2) {
+      // opacity: 0;
+      transform: translateX(150%);
+      transition: 0.3s;
+    }
+    span:nth-child(1) {
+      opacity: 1;
+      transform: translateY(11px) rotate(135deg);
+      transition: 0.5s;
+    }
+    span:nth-child(3) {
+      opacity: 1;
+      width: 100%;
+      transform: translateY(-11px) rotate(-135deg);
+      transition: 0.5s;
+    }
+  }
 }
 
 .logo {
@@ -1297,8 +1336,6 @@
   &__form-area {
     grid-column: span 2;
     min-height: 125px;
-  }
-  &__form-input {
   }
   &__form-checkbox {
     grid-column: span 2;
