--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -4,11 +4,23 @@
 // ==========
 
 // ==========
-@media (max-width: 1200px) {}
+@media (max-width: 1200px) {
+  .footer__menu {
+    margin-right: auto;
+  }
+}
 // ==========
 
 // ==========
 @media (max-width: 992px) {
+  .footer{
+    &__info {
+      flex: 1;
+    }
+    &__social {
+      margin: 0 20px 0 50px;
+    }
+  }
 }
 // ==========
 
@@ -29,6 +41,31 @@
     padding-left: 0;
     & + .menu__item {
       padding-right: 0;
+    }
+  }
+  .footer {
+    &__inner {
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+    &__content {
+      padding: 50px 0;
+    }
+    &__info {
+      flex: none;
+      width: 100%;
+      max-width: 100%;
+      margin-bottom: 50px;
+    }
+    &__info-text {
+      max-width: 100%;
+    }
+    &__form-input {
+      max-width: 100%;
+    }
+    &__social,
+    &__menu {
+      margin: 0 auto;
     }
   }
 }
@@ -90,6 +127,18 @@
         bottom: 0;
         z-index: -1;
       }
+    }
+  }
+  .footer {
+    &__form {
+      flex-direction: column;
+    }
+    &__form-btn {
+      margin: 10px 0 0;
+    }
+    &__copyright {
+      padding: 30px 0;
+      font-size: 14px;
     }
   }
 }
