--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -29,6 +29,7 @@
     padding: 10px 5px;
     display: none;
     overflow: hidden;
+    background-color: #fff;
     span {
       display: block;
       width: 100%;
