--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -366,7 +366,7 @@
   grid-gap: 30px;
   &__item {
     position: relative;
-    height: 350px;
+    padding-bottom: 100%;
     overflow: hidden;
     &:hover {
       .collection__info {
@@ -377,6 +377,9 @@
     }
   }
   &__img {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
