Adapted the .gallery section in index.html and gallery.html for mobile devices

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -539,10 +539,10 @@
   }
   &__buttons {
     text-align: center;
-    margin-bottom: 40px;
+    margin-bottom: 35px;
   }
   &__btn {
-    margin: 0 12.5px;
+    margin: 5px 12.5px;
     padding: 6px 20px;
     font-size: 14px;
     line-height: 28px;
