--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -49,6 +49,17 @@
       display: none;
     }
   }
+  .gallery {
+    &__items {
+      grid-gap: 15px;
+    }
+    &__buttons {
+      margin-bottom: 25px;
+    }
+    &__btn {
+      margin: 5px;
+    }
+  }
 }
 // ==========
 
@@ -179,6 +190,11 @@
     &__item--measurements {
       margin-left: auto;
       margin-right: auto;
+    }
+  }
+  .gallery {
+    &__items {
+      grid-gap: 10px;
     }
   }
 }
@@ -318,6 +334,24 @@
     }
     &__line {
       display: none;
+    }
+  }
+  .gallery {
+    &__items {
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(auto, 350px);
+      grid-gap: 10px;
+    }
+    &__item {
+      grid-column: span 1;
+    }
+    &__item:nth-child(1) {
+      grid-column: span 2;
+      grid-row: span 2;
+    }
+    &__item:nth-child(6) {
+      grid-column: span 2;
+      grid-row: span 2;
     }
   }
 }
