--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -569,8 +569,11 @@
     grid-column-gap: 30px;
   }
   &__item {
+    position: relative;
     grid-column: span 3;
     grid-row: span 1;
+    padding-bottom: 120%;
+    background-color: $gray;
   }
   &__item:nth-child(1) {
     grid-column: span 5;
@@ -581,6 +584,9 @@
     grid-row: 3 / span 2;
   }
   &__img {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
