--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -114,6 +114,12 @@
       padding-bottom: 10px;
     }
   }
+  .partners {
+    padding-top: 30px;
+    &__item {
+      padding: 15px;
+    }
+  }
 }
 // ==========
 
@@ -293,6 +299,13 @@
       padding-left: 0;
     }
   }
+  .partners {
+    &__item {
+      width: 33.333%;
+      max-width: 180px;
+      padding: 25px;
+    }
+  }
 }
 // ==========
 
@@ -470,6 +483,13 @@
   }
   .fancybox-slide--video {
     padding: 40px 10px;
+  }
+  
+  .partners {
+    &__item {
+      width: 50%;
+      padding: 10px;
+    }
   }
 }
 // ==========
