--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -822,7 +822,7 @@
   }
   &__items {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     flex-wrap: wrap;
   }
   &__item {
