Adapted the .contact-slider section in contact.html for mobile devices

--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -521,5 +521,15 @@
       grid-column: span 1;
     }
   }
+  .contact-slider {
+    margin: 0 -10px 100px;
+    .contact__slider {
+      padding: 0 30px;
+    }
+    &__link {
+      margin-bottom: 0;
+      padding-bottom: 0;
+    }
+  }
 }
 // ==========
