--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1004,8 +1004,11 @@
   &__item-popup {
     display: block;
     width: 100%;
-    height: 415px;
     overflow: hidden;
+  }
+  &__item-img {
+    height: 56.5%;
+    object-fit: cover;
   }
   &__item-info {
     margin-top: 24px;
