--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -129,7 +129,7 @@
   }
   .blog {
     &__items {
-      width: 69%;
+      width: 65%;
     }
     &__item-info {
       margin: 15px 0 5px;
@@ -150,7 +150,30 @@
     }
   }
   .aside {
-    margin-left: 20px;
+    width: 35%;
+    margin-left: 0;
+    padding-left: 20px;
+  }
+  .blog-one {
+    &__content {
+      blockquote {
+        margin: -10px 0 10px;
+        padding: 35px 15px;
+        font-size: 22px;
+        line-height: 30px;
+      }
+    }
+    &__comments-list .blog-one__comments-list {
+      padding-top: 0px;
+      margin-left: 20px;
+    }
+    &__comments-avatar {
+      width: 45px;
+      height: 45px;
+    }
+    &__comments-date {
+      margin-bottom: 5px;
+    }
   }
 }
 // ==========
@@ -360,10 +383,27 @@
     &__items {
       width: 100%;
     }
+    &__item-popup-btn img {
+      width: 60px;
+      height: 60px;
+    }
   }
   .aside {
     width: 100%;
     margin: 70px 0;
+    padding: 0;
+  }
+  .blog-one {
+    &__links {
+      width: 100%;
+    }
+    &__link:last-child {
+      margin-top: 20px;
+      margin-left: auto;
+    }
+    &__form {
+      margin-bottom: 50px;
+    }
   }
 }
 // ==========
@@ -578,6 +618,39 @@
       padding: 25px 15px;
       font-size: 20px;
       line-height: 26px;
+    }
+  }
+  .blog-one {
+    &__content {
+      blockquote {
+        margin-left: -15px;
+        margin-right: -15px;
+        font-size: 20px;
+        line-height: 26px;
+      }
+    }
+    &__form {
+      grid-template-columns: 100%;
+    }
+    &__form-title,
+    &__form-area,
+    &__form-checkbox,
+    &__form-btn {
+      grid-column: span 1;
+    }
+    &__comments-list &__comments-list {
+      padding: 1px 0 0 10px;
+      margin: 0;
+    }
+    &__comments-buttons {
+      display: flex;
+      align-items: flex-end;
+      flex-direction: column;
+      text-align: right;
+    }
+    &__comments-report,
+    &__comments-reply {
+      line-height: 20px;
     }
   }
 }
